--- a/res/layout/place_form.xml
+++ b/res/layout/place_form.xml
@@ -52,7 +52,7 @@
                     layout="@layout/widget_candi_header_place" />
 
                 <LinearLayout
-                    android:id="@+id/shortcut_holder"
+                    android:id="@+id/holder_shortcuts"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical" />
