--- a/res/layout/widget_candi_view_radar.xml
+++ b/res/layout/widget_candi_view_radar.xml
@@ -6,7 +6,7 @@
     android:layout_height="wrap_content" >
 
     <com.aircandi.ui.widgets.AirImageView
-        android:id="@+id/photo"
+        android:id="@+id/entity_photo"
         android:layout_width="@dimen/image_medium"
         android:layout_height="@dimen/image_medium"
         custom:layout="@layout/widget_webimageview_candi_view"
@@ -17,14 +17,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/photo"
+        android:layout_toRightOf="@+id/entity_photo"
         android:orientation="vertical"
         android:paddingBottom="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
         android:paddingTop="5dp" >
 
-        <com.aircandi.ui.widgets.AirTitle
+        <com.aircandi.ui.widgets.AirTextLight
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -50,8 +50,8 @@
         android:id="@+id/shortcuts"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/photo"
-        android:layout_toRightOf="@+id/photo"
+        android:layout_alignBottom="@+id/entity_photo"
+        android:layout_toRightOf="@+id/entity_photo"
         android:orientation="horizontal"
         android:paddingBottom="5dp"
         android:paddingLeft="10dp"
@@ -61,7 +61,7 @@
         android:id="@+id/distance"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/photo"
+        android:layout_alignBottom="@+id/entity_photo"
         android:layout_alignParentRight="true"
         android:paddingBottom="12dp"
         android:paddingRight="10dp"
