--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -12,8 +12,8 @@
             android:dialogTitle="@string/pref_search_radius_dialog_title"
             android:entries="@array/search_radius_entries"
             android:entryValues="@array/search_radius_values"
-            android:negativeButtonText="@string/pref_dialog_cancel"
-            android:positiveButtonText="@string/pref_dialog_ok"
+            android:negativeButtonText="@string/dialog_cancel"
+            android:positiveButtonText="@string/dialog_ok"
             android:title="@string/pref_search_radius_title"
             custom:keyId="@string/pref_search_radius" />
         
@@ -23,8 +23,8 @@
             android:dialogTitle="@string/pref_theme_dialog_title"
             android:entries="@array/theme_entries"
             android:entryValues="@array/theme_values"
-            android:negativeButtonText="@string/pref_dialog_cancel"
-            android:positiveButtonText="@string/pref_dialog_ok"
+            android:negativeButtonText="@string/dialog_cancel"
+            android:positiveButtonText="@string/dialog_ok"
             android:title="@string/pref_theme_title"
             custom:keyId="@string/pref_theme" />
         
@@ -34,8 +34,8 @@
             android:dialogTitle="@string/pref_place_provider_dialog_title"
             android:entries="@array/place_provider_entries"
             android:entryValues="@array/place_provider_values"
-            android:negativeButtonText="@string/pref_dialog_cancel"
-            android:positiveButtonText="@string/pref_dialog_ok"
+            android:negativeButtonText="@string/dialog_cancel"
+            android:positiveButtonText="@string/dialog_ok"
             android:summary="@string/pref_place_provider_summary"
             android:title="@string/pref_place_provider_title"
             custom:keyId="@string/pref_place_provider" />
