--- a/res/layout/temp_listitem_comment.xml
+++ b/res/layout/temp_listitem_comment.xml
@@ -76,6 +76,7 @@
             android:ellipsize="end"
             android:maxLines="5"
             android:text="@string/dummy_message"
+            android:textIsSelectable="true"
             custom:textId="@string/dummy_message" />
 
         <LinearLayout
@@ -93,33 +94,6 @@
                 custom:textId="@string/dummy_datetime" />
         </LinearLayout>
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <com.aircandi.ui.widgets.EntityView
-                android:id="@+id/parent"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_toLeftOf="@+id/button_overflow"
-                android:background="@drawable/selector_button"
-                android:clickable="true"
-                android:onClick="onEntityClick"
-                custom:label="@string/label_comment_parent" />
-
-            <com.aircandi.ui.widgets.ComboButton
-                android:id="@+id/button_overflow"
-                style="@style/button_link"
-                android:layout_width="@dimen/button_height"
-                android:layout_height="@dimen/button_height"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:clickable="true"
-                android:minWidth="@dimen/button_height"
-                android:onClick="onOverflowButtonClick"
-                custom:drawable="?attr/iconOverflow"
-                custom:layout="@layout/widget_combo_button_no_text" />
-        </RelativeLayout>
     </LinearLayout>
 
 </LinearLayout>
