--- a/res/layout/widget_candi_header_place.xml
+++ b/res/layout/widget_candi_header_place.xml
@@ -63,6 +63,7 @@
             android:id="@+id/candi_form_description"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textIsSelectable="true"
             android:visibility="gone"
             tools:text="@string/dummy_description" />
     </LinearLayout>
