--- a/res/layout/candigram_edit.xml
+++ b/res/layout/candigram_edit.xml
@@ -65,29 +65,35 @@
                         android:layout_marginBottom="10dp"
                         android:layout_marginTop="5dp" >
 
-                        <com.aircandi.ui.widgets.AirImageView
-                            android:id="@+id/entity_photo"
-                            android:layout_width="@dimen/image_large"
-                            android:layout_height="@dimen/image_large"
-                            android:layout_marginLeft="4dp"
-                            android:layout_marginRight="10dp"
-                            android:clickable="true"
-                            android:minWidth="@dimen/image_large"
-                            android:onClick="onChangePhotoButtonClick"
-                            android:scaleType="centerCrop"
-                            custom:layout="@layout/widget_webimageview_framed"
-                            custom:showBusy="true"
-                            custom:sizeHint="@dimen/image_large" />
-
-                        <com.aircandi.ui.widgets.AirButton
-                            android:id="@+id/button_change_image"
-                            style="@style/button_floating"
+                        <FrameLayout
+                            style="@style/selectable_image"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:layout_marginRight="10dp"
+                            android:clickable="true"
+                            android:onClick="onChangePhotoButtonClick" >
+
+                            <com.aircandi.ui.widgets.AirImageView
+                                android:id="@+id/entity_photo"
+                                android:layout_width="@dimen/image_large"
+                                android:layout_height="@dimen/image_large"
+                                android:minWidth="@dimen/image_large"
+                                android:scaleType="centerCrop"
+                                custom:layout="@layout/widget_webimageview_framed"
+                                custom:showBusy="true"
+                                custom:sizeHint="@dimen/image_large" />
+                        </FrameLayout>
+
+                        <com.aircandi.ui.widgets.ComboButton
+                            android:id="@+id/button_change_image"
+                            style="@style/button_link"
+                            android:layout_width="@dimen/button_width_min"
+                            android:layout_height="@dimen/button_height"
                             android:layout_gravity="center_vertical"
                             android:layout_marginLeft="10dp"
                             android:onClick="onChangePhotoButtonClick"
-                            custom:textId="@string/button_change_picture" />
+                            custom:label="@string/button_change_picture" />
+
                     </LinearLayout>
 
                     <!-- Title and Content -->
