--- a/res/layout/temp_listitem_candigram.xml
+++ b/res/layout/temp_listitem_candigram.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
+    style="@style/selectable_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/selector_button"
     android:paddingBottom="2dp"
     android:paddingTop="2dp" >
 
@@ -20,7 +20,6 @@
         android:id="@+id/holder_body"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_toLeftOf="@+id/image_forward"
         android:layout_toRightOf="@+id/entity_photo"
         android:orientation="vertical" >
 
@@ -31,23 +30,23 @@
             android:layout_weight="0"
             android:ellipsize="end"
             android:maxLines="1"
-            custom:textId="@string/dummy_type"
-            android:textColor="@color/accent_blue" />
+            android:textColor="@color/accent_blue"
+            custom:textId="@string/dummy_type" />
 
         <com.aircandi.ui.widgets.AirTextLight
             android:id="@+id/name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            custom:textId="@string/dummy_title_short"
             android:textAppearance="?android:attr/textAppearanceLarge"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            custom:textId="@string/dummy_title_short" />
 
         <com.aircandi.ui.widgets.AirTextView
             android:id="@+id/subtitle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            custom:textId="@string/dummy_subtitle"
-            android:textStyle="italic" />
+            android:textStyle="italic"
+            custom:textId="@string/dummy_subtitle" />
 
         <com.aircandi.ui.widgets.AirTextView
             android:id="@+id/description"
@@ -55,8 +54,8 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="2"
-            custom:textId="@string/dummy_description"
-            android:visibility="visible" />
+            android:visibility="visible"
+            custom:textId="@string/dummy_description" />
     </LinearLayout>
 
     <LinearLayout
@@ -65,7 +64,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/holder_body"
-        android:layout_toLeftOf="@+id/image_forward"
         android:layout_toRightOf="@+id/entity_photo"
         android:orientation="vertical" >
 
@@ -74,8 +72,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="left"
-            custom:textId="@string/dummy_comments"
-            android:textAppearance="?android:attr/textAppearanceSmall" />
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            custom:textId="@string/dummy_comments" />
 
         <com.aircandi.ui.widgets.UserView
             android:id="@+id/creator"
@@ -83,15 +81,5 @@
             android:layout_height="wrap_content"
             custom:layout="@layout/widget_user_view_text_only" />
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/image_forward"
-        android:layout_width="10dp"
-        android:layout_height="20dp"
-        android:layout_alignParentRight="true"
-        android:layout_centerVertical="true"
-        android:paddingRight="3dp"
-        android:scaleType="fitXY"
-        android:src="?attr/iconNavigate" />
 
 </RelativeLayout>
