--- a/res/layout/temp_indicator_candigram.xml
+++ b/res/layout/temp_indicator_candigram.xml
@@ -6,13 +6,14 @@
 
     <com.aircandi.ui.widgets.AirImageView
         android:id="@+id/entity_photo"
+        style="@style/selectable_image"
         android:layout_width="@dimen/image_medium"
         android:layout_height="@dimen/image_medium"
         android:layout_centerInParent="true"
+        android:scaleType="centerCrop"
         custom:layout="@layout/widget_webimageview_candigram"
         custom:showBusy="true"
-        custom:sizeHint="@dimen/image_medium"
-        android:scaleType="centerCrop" />
+        custom:sizeHint="@dimen/image_medium" />
 
     <com.aircandi.ui.widgets.AirTextView
         android:id="@+id/name"
@@ -20,9 +21,9 @@
         android:layout_height="match_parent"
         android:layout_margin="8dp"
         android:gravity="top|right"
-        custom:textId="@string/dummy_number"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:textColor="@color/accent_blue"
-        android:visibility="gone" />
+        android:visibility="gone"
+        custom:textId="@string/dummy_number" />
 
 </RelativeLayout>
