--- a/res/layout/widget_candi_header_vertical.xml
+++ b/res/layout/widget_candi_header_vertical.xml
@@ -4,8 +4,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
-    android:layout_height="match_parent"
-    android:paddingTop="3dp" >
+    android:layout_height="match_parent" >
 
     <LinearLayout
         android:layout_width="wrap_content"
