--- a/res/layout/widget_candi_view_radar.xml
+++ b/res/layout/widget_candi_view_radar.xml
@@ -7,11 +7,12 @@
 
     <com.aircandi.ui.widgets.AirImageView
         android:id="@+id/entity_photo"
+        style="@style/selectable_image"
         android:layout_width="@dimen/image_medium"
         android:layout_height="@dimen/image_medium"
+        android:scaleType="centerCrop"
         custom:layout="@layout/widget_webimageview_candi_view"
-        custom:sizeHint="@dimen/image_medium"
-        android:scaleType="centerCrop" />
+        custom:sizeHint="@dimen/image_medium" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -30,10 +31,10 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
-            custom:textId="@string/dummy_title_short"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="?attr/textColorCandiView"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            custom:textId="@string/dummy_title_short" />
 
         <com.aircandi.ui.widgets.AirTextView
             android:id="@+id/subtitle"
@@ -41,9 +42,9 @@
             android:layout_height="wrap_content"
             android:ellipsize="end"
             android:maxLines="1"
-            custom:textId="@string/dummy_tags"
             android:textAppearance="?attr/textAppearanceExtraSmall"
-            android:textColor="?attr/textColorCandiView" />
+            android:textColor="?attr/textColorCandiView"
+            custom:textId="@string/dummy_tags" />
     </LinearLayout>
 
     <LinearLayout
