--- a/res/layout/candigram_edit.xml
+++ b/res/layout/candigram_edit.xml
@@ -82,6 +82,7 @@
                                 android:scaleType="centerCrop"
                                 custom:layout="@layout/widget_webimageview_framed"
                                 custom:showBusy="true"
+                                custom:sizeType="preview"
                                 custom:sizeHint="@dimen/image_large" />
                         </FrameLayout>
 
