--- a/res/layout/temp_indicator_candigram.xml
+++ b/res/layout/temp_indicator_candigram.xml
@@ -13,6 +13,7 @@
         android:scaleType="centerCrop"
         custom:layout="@layout/widget_webimageview_candigram"
         custom:showBusy="true"
+        custom:sizeType="thumbnail"
         custom:sizeHint="@dimen/image_medium" />
 
     <com.aircandi.ui.widgets.AirTextView
