--- a/res/layout/temp_listitem_candigram.xml
+++ b/res/layout/temp_listitem_candigram.xml
@@ -15,6 +15,7 @@
         android:layout_alignParentLeft="true"
         android:layout_marginRight="10dp"
         custom:layout="@layout/widget_webimageview_candi_view"
+        custom:sizeType="thumbnail"
         custom:sizeHint="@dimen/image_medium" />
 
     <LinearLayout
