--- a/res/layout/temp_listitem_radar.xml
+++ b/res/layout/temp_listitem_radar.xml
@@ -4,6 +4,6 @@
     android:id="@+id/candi_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/selector_image"
     android:padding="3dp"
-    custom:layout="@layout/widget_candi_view_radar"
-    android:background="@drawable/selector_image" />
+    custom:layout="@layout/widget_candi_view_radar" />
