--- a/res/layout/widget_candi_view_radar.xml
+++ b/res/layout/widget_candi_view_radar.xml
@@ -12,6 +12,7 @@
         android:layout_height="@dimen/image_medium"
         android:scaleType="centerCrop"
         custom:layout="@layout/widget_webimageview_candi_view"
+        custom:sizeType="thumbnail"
         custom:sizeHint="@dimen/image_medium" />
 
     <LinearLayout
